--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
   flutter_staggered_animations: ^1.1.1
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
+  #FIREBASE
 
 dev_dependencies:
   flutter_test:
