--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,12 +53,15 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   uuid: ^4.5.1
   fpdart: ^1.1.1
+  shared_preferences: ^2.3.3
   
   #FIREBASE
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   firebase_storage: ^12.3.6
+  google_sign_in: ^6.2.2
+  
   
   
 
