--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   firebase_storage: ^12.3.6
   google_sign_in: ^6.2.2
+  image_picker: ^1.1.2
   
   
   
